--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>萬萬個人頁</title>
+    <title>萬萬</title>
     <style>
         * {
             margin: 0;
@@ -170,15 +170,16 @@
         </div>
         
         <div class="testimonial-section">
-            <div class="video-container vertical-video">
-                <iframe 
-                    src="https://www.youtube.com/embed/EryinO3bA4U?si=PD-6Q2l6x2uX792u&autoplay=1&mute=1&loop=1&playlist=EryinO3bA4U" 
-                    title="YouTube 影片" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    allowfullscreen>
-                </iframe>
-            </div>
+          <div class="video-container vertical-video">
+              <iframe 
+                  src="https://www.youtube.com/embed/EcyiWeDyWCM"
+                  title="YouTube" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+              </iframe>
+          </div>
+      </div>
             
             <img src="images/4.jpg" alt="用戶反饋" class="testimonial-image">
         </div>
