--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>萬萬</title>
+    <title>萬萬個人頁</title>
     <style>
         * {
             margin: 0;
@@ -172,8 +172,8 @@
         <div class="testimonial-section">
           <div class="video-container vertical-video">
               <iframe 
-                  src="https://www.youtube.com/embed/EcyiWeDyWCM"
-                  title="YouTube" 
+                  src="https://www.youtube.com/embed/EcyiWeDyWCM?autoplay=1&mute=1"
+                  title="YouTube 影片" 
                   frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   allowfullscreen>
