--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ src="https://www.facebook.com/tr?id=496057096794216&ev=PageView&noscript=1"
         }
         
         body {
-            background-image: url('images/5.jpg');
+            background-image: url('images/5.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
